--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,26 +1,27 @@
 ---
+import Navbar from "../components/Navbar.astro";
+
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
 ---
 
 <!doctype html>
-
 <html lang="pt-BR">
-	<head>
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <head>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-		<meta charset="UTF-8" />
-		<meta name="description" content="Henrique GC Portfolio" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		
-		<title>{title}</title>
-	</head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Henrique GC Portfolio" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
 
-	<body>
-		<slot />
-	</body>
+    <title>{title}</title>
+  </head>
+
+  <body class="bg-[#fafafa]">
+    <slot />
+  </body>
 </html>
