--- a/src/components/Blog/BlogSection.astro
+++ b/src/components/Blog/BlogSection.astro
@@ -6,17 +6,43 @@ import BlogSectionCard from "./BlogSectionCard.astro";
   class="container mx-auto flex items-center justify-between my-12 gap-16 flex-col"
 >
   <div class="w-full flex items-center justify-center flex-col mt-20 mb-12">
-    <h2 class="text-2xl">Check out my latest work</h2>
+    <h2 class="text-5xl font-bold font-header text-title">
+      Check out my latest work
+    </h2>
 
-    <p class="max-w-96 text-center text-sm">
+    <p class="max-w-[28rem] text-center text-lg text-description mt-5">
       My goal is to create effective digital experiences that make people’s
       lives easier and better. I hope my work is a reflection of this.
     </p>
   </div>
 
-  <a href="#" class="grid grid-cols-3 w-full gap-x-8">
-    <BlogSectionCard />
-    <BlogSectionCard />
-    <BlogSectionCard />
-  </a>
+  <div class="grid grid-cols-3 w-full gap-x-8">
+    <BlogSectionCard
+      title="Post n° 1"
+      description="Short hand description to tell whats is going on to the project bla bla bla..."
+      href="/posts/spmp"
+      imageAlt="Imagem alt"
+      imageSource="https://jane-next-obfuscated-preview.vercel.app/_next/image?url=%2Fimages%2Farticles%2Farticle-07.jpg&w=414&q=75"
+      tag="Desenvolvimento"
+      date="17 de junho de 2004"
+    />
+    <BlogSectionCard
+      title="Post n° 1"
+      description="Short hand description to tell whats is going on to the project bla bla bla..."
+      href="/posts/spmp"
+      imageAlt="Imagem alt"
+      imageSource="https://jane-next-obfuscated-preview.vercel.app/_next/image?url=%2Fimages%2Farticles%2Farticle-07.jpg&w=414&q=75"
+      tag="Desenvolvimento"
+      date="17 de junho de 2004"
+    />
+    <BlogSectionCard
+      title="Post n° 1"
+      description="Short hand description to tell whats is going on to the project bla bla bla..."
+      href="/posts/spmp"
+      imageAlt="Imagem alt"
+      imageSource="https://jane-next-obfuscated-preview.vercel.app/_next/image?url=%2Fimages%2Farticles%2Farticle-07.jpg&w=414&q=75"
+      tag="Desenvolvimento"
+      date="17 de junho de 2004"
+    />
+  </div>
 </section>
