--- a/src/components/Blog/BlogSectionCard.astro
+++ b/src/components/Blog/BlogSectionCard.astro
@@ -1,33 +1,45 @@
+---
+import * as Icon from "@astropub/icons";
+import { Image } from "astro:assets";
+
+interface Props {
+  tag: string;
+  title: string;
+  description: string;
+  date: string;
+  imageSource: string;
+  imageAlt: string;
+  href: string;
+}
+
+const { tag, title, description, date, href, imageSource, imageAlt } =
+  Astro.props;
+---
+
 <div class="col-span-1 bg-blue-50 w-full rounded-xl p-4">
-  <img
-    src="https://jane-next-obfuscated-preview.vercel.app/_next/image?url=%2Fimages%2Farticles%2Farticle-07.jpg&w=414&q=75"
-    class="rounded-lg"
-  />
+  <a href={href}>
+    <Image
+      src={imageSource}
+      alt={imageAlt}
+      width="1000"
+      height="1000"
+      class="rounded-lg"
+    />
+  </a>
 
-  <p class="my-3 text-sm">Tag</p>
+  <p class="mt-3 mb-2 text-sm">{tag}</p>
 
-  <h5 class="mb-2 text-xl">Title</h5>
+  <a href="#">
+    <h5 class="mb-3 text-xl">{title}</h5>
+  </a>
 
   <p class="">
-    Learn how to leverage your skills and capitalize on various platforms to
-    boost your income and thrive in the digital landscape.
+    {description}
   </p>
 
   <span class="flex items-center justify-center mt-6 gap-2">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 24 24"
-      stroke-width="1.75"
-      stroke="currentColor"
-      class="w-4 h-4"
-      ><path
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5m-9-6h.008v.008H12v-.008zM12 15h.008v.008H12V15zm0 2.25h.008v.008H12v-.008zM9.75 15h.008v.008H9.75V15zm0 2.25h.008v.008H9.75v-.008zM7.5 15h.008v.008H7.5V15zm0 2.25h.008v.008H7.5v-.008zm6.75-4.5h.008v.008h-.008v-.008zm0 2.25h.008v.008h-.008V15zm0 2.25h.008v.008h-.008v-.008zm2.25-4.5h.008v.008H16.5v-.008zm0 2.25h.008v.008H16.5V15z"
-      ></path></svg
-    >
+    <Icon.Calendar size="18" />
 
-    <p class="text-xs">24 Março, 2077</p>
+    <p class="text-xs">{date}</p>
   </span>
 </div>
