--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,19 @@
 <header x-data="{ open: false }" class="p-4 border-b border-b-gray-200">
   <div class="container mx-auto flex items-center justify-between my-2">
-    <div class="text-2xl font-bold">MyLogo</div>
+    <a href="/"><div class="text-2xl font-bold">.hGC</div></a>
 
     <div class="hidden md:flex space-x-4">
-      <a href="#" class="hover:bg-gray-100 px-3 py-2 rounded">Projects</a>
-      <a href="#" class="hover:bg-gray-100 px-3 py-2 rounded">Blog</a>
+      <a href="/about" class="hover:bg-gray-100 px-3 py-2 rounded">About</a>
+      <a href="/projects" class="hover:bg-gray-100 px-3 py-2 rounded"
+        >Projects</a
+      >
+      <a href="/blog" class="hover:bg-gray-100 px-3 py-2 rounded">Blog</a>
+    </div>
+
+    <div class="hidden md:flex">
       <a href="#">
         <button
-          class="w-1/2 px-5 py-2 text-sm tracking-wide transition-colors duration-200 bg-blue-50 rounded-full shrink-0 sm:w-auto -blue-500 -600"
+          class="w-1/2 px-5 py-3 text-sm tracking-wide transition-colors duration-200 bg-blue-100 rounded-full shrink-0 sm:w-auto -blue-500 -600"
         >
           Book a call
         </button>
