--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,7 @@ import * as Icon from "@astropub/icons";
 ---
 
 <div
-  class="container mx-auto flex items-center justify-between my-24 gap-[4.5rem] relative"
+  class="container mx-auto flex items-center justify-between my-12 lg:my-24 md:mt-[6.5rem] gap-[4.5rem] relative flex-col lg:flex-row px-4 lg:px-0"
 >
   <div class="absolute -z-10 -top-56 -left-[40rem] w-[70rem] h-[70rem]">
     <svg
@@ -37,7 +37,7 @@ import * as Icon from "@astropub/icons";
     <div class="mt-8 flex items-center justify-center gap-4">
       <a href="#">
         <button
-          class="w-1/2 px-6 py-3 text-sm leading-6 tracking-wide text-white transition-colors duration-200 bg-blue-500 rounded-full shrink-0 sm:w-auto hover:bg-blue-600 -blue-500 -600"
+          class="px-6 py-3 text-sm leading-6 tracking-wide text-white transition-colors duration-200 bg-blue-500 rounded-full shrink-0 sm:w-auto hover:bg-blue-600 -blue-500 -600"
         >
           Book a call with me
         </button>
@@ -74,6 +74,6 @@ import * as Icon from "@astropub/icons";
   </div>
 
   <div class="flex items-center justify-center">
-    <img src="/me.jpg" class="h-[36rem] rounded-xl" />
+    <img src="/me.jpg" class="h-[24rem] lg:h-[36rem] rounded-xl" />
   </div>
 </div>
