--- a/src/components/Projects/ProjectSection.astro
+++ b/src/components/Projects/ProjectSection.astro
@@ -3,10 +3,10 @@ import ProjectSectionCard from "./ProjectSectionCard.astro";
 ---
 
 <section
-  class="container flex items-center justify-between my-12 mx-auto gap-16 flex-col"
+  class="container flex items-center justify-between my-8 lg:my-12 mx-auto gap-16 flex-col px-4 lg:px-0"
 >
   <div class="w-full flex items-center justify-center flex-col mt-20 mb-12">
-    <h2 class="text-5xl font-bold font-header text-title">
+    <h2 class="text-5xl font-bold font-header text-title text-center">
       Check out my latest work
     </h2>
 
