chore: removing references and adding mine

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,18 +1,19 @@
 ---
 import Container from "@components/Container.astro";
 import Link from "@components/Link.astro";
-import { SITE } from "@consts";
 ---
 
 <header transition:persist>
   <Container>
     <div class="flex flex-wrap justify-between gap-y-2">
       <Link href="/" underline={false}>
-        <div class="font-semibold">
-          {SITE.TITLE}&nbsp;🔬
-        </div>
+        <div class="font-semibold">hGC</div>
       </Link>
       <nav class="flex items-center gap-1 text-sm">
+        <Link href="/about">about</Link>
+        <span>
+          {`/`}
+        </span>
         <Link href="/blog">blog</Link>
         <span>
           {`/`}
