--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -28,10 +28,7 @@ function buildToc(headings: Heading[]) {
 }
 ---
 
-<details
-  open
-  class="animate rounded-lg border border-black/15 dark:border-white/20"
->
+<details class="animate rounded-lg border border-black/15 dark:border-white/20">
   <summary>Table of Contents</summary>
   <nav class="">
     <ul class="py-3">
