--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -2,58 +2,95 @@
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/Container.astro";
 import { SITE, HOME, SOCIALS, ABOUT } from "@consts";
-import ArrowCard from "@components/ArrowCard.astro";
+import TimelineElement from "@components/TimelineElement.astro";
 import Link from "@components/Link.astro";
 ---
 
 <Layout title={ABOUT.TITLE} description={ABOUT.DESCRIPTION}>
   <Container>
-    <aside data-pagefind-ignore>
-      <h1 class="animate font-semibold text-black dark:text-white">
-        Introducing Astro Micro
-      </h1>
+    <aside>
       <div class="space-y-16">
-        <section>
+        <section class="mt-4">
           <article class="space-y-4">
             <span class="animate">
-              <p>
-                Astro Micro is an accessible theme for <Link
-                  href="https://astro.build/">Astro</Link
-                >. It's a fork of
-                <Link href="https://github.com/markhorn-dev">
-                  Mark Horn's
-                </Link> popular theme <Link
-                  href="https://astro.build/themes/details/astronano/"
-                  >Astro Nano</Link
-                >. Like Nano, Micro comes with zero frameworks installed.
-              </p>
-              <p>
-                Micro adds features like <Link href="https://pagefind.app/"
-                  >Pagefind</Link
-                > for search and more. For a full list of changes, see this <Link
-                  href="/blog/00-micro-changelog">blog post</Link
-                >.
-              </p>
-            </span>
-            <span class="animate">
-              <p>
-                Micro still comes with everything great about Nano — full type
-                safety, a sitemap, an RSS feed, and Markdown + MDX support.
-                Styled with TailwindCSS and preconfigured with system, light,
-                and dark themes.
-              </p>
-              <p>
-                Visit
-                <Link href="https://github.com/trevortylerlee/astro-micro">
-                  Astro Micro on GitHub
-                </Link>
-                to fork the repository to get started.
-              </p>
+              <div class="flex items-start justify-between gap-8">
+                <img src="/brand/me.jpg" class="h-96 rounded" />
+              </div>
             </span>
           </article>
         </section>
 
-        <section class="animate space-y-4">
+        <section class="animate">
+          <h2 class="font-semibold text-black dark:text-white">
+            My carrer journey
+          </h2>
+          <article>
+            <div class="time-line-container mt-[1.5em]">
+              <TimelineElement
+                title="Software Engineer"
+                subtitle="Jan 2024 ~ present"
+                company="Bitzen Tecnologia"
+                hasGap
+              >
+                I work as a full stack developer allocated to differents B2B
+                projects
+              </TimelineElement>
+
+              <TimelineElement
+                title="Project Lead"
+                subtitle="Mar 2022 ~ present"
+                company="São Paulo Mais Perto"
+                hasGap
+                >I served as the lead developer, responsible for planning the
+                project's architecture and technology.
+              </TimelineElement>
+
+              <TimelineElement
+                title="CTO"
+                subtitle="Aug 2022 ~ Aug 2024"
+                company="SetupJr"
+                hasGap
+                >As CEO, I managed teams to develop websites for clients and
+                internal service applications
+              </TimelineElement>
+
+              <TimelineElement
+                title="Web developer"
+                subtitle="Jun 2021 ~ set 2022"
+                company="Star Formação Profissional & TI"
+              >
+                I worked as a web application developer for internal websites.
+              </TimelineElement>
+            </div>
+          </article>
+        </section>
+
+        <!-- <section class="animate mt-2">
+          <h2 class="font-semibold text-black dark:text-white">Technologies</h2>
+          <article>
+            <p>
+              If you want to get in touch with me about something or just to say
+              hi, reach out on social media or send me an email.
+            </p>
+          </article>
+        </section> -->
+
+        <section class="animate -mt-2">
+          <h2 class="font-semibold text-black dark:text-white">Languages</h2>
+          <article>
+            <ul>
+              <li>
+                <strong>English</strong>: Professional working proficiency
+              </li>
+              <li>
+                <strong>Brazilian portuguese</strong>: Native or bilingual
+                proficiency
+              </li>
+            </ul>
+          </article>
+        </section>
+
+        <section class="animate -mt-2">
           <h2 class="font-semibold text-black dark:text-white">
             Let's Connect
           </h2>
@@ -62,31 +99,41 @@ import Link from "@components/Link.astro";
               If you want to get in touch with me about something or just to say
               hi, reach out on social media or send me an email.
             </p>
+            <span class="animate flex gap-1">
+              {
+                SOCIALS.map((SOCIAL) => (
+                  <li class="flex gap-x-1 text-nowrap">
+                    <img
+                      class="h-4 w-4 dark:hidden"
+                      src={SOCIAL.ICON}
+                      alt="Light Image"
+                    />
+                    <img
+                      class="hidden h-4 w-4 dark:block"
+                      src={SOCIAL.ICON_DARK}
+                      alt="Dark Image"
+                    />
+                    <Link
+                      href={SOCIAL.HREF}
+                      external
+                      aria-label={`${SITE.TITLE} on ${SOCIAL.NAME}`}
+                    >
+                      {SOCIAL.NAME}
+                    </Link>
+                    {"/"}
+                  </li>
+                ))
+              }
+              <li class="line-clamp-1">
+                <Link
+                  href={`mailto:${SITE.EMAIL}`}
+                  aria-label={`Email ${SITE.TITLE}`}
+                >
+                  {SITE.EMAIL}
+                </Link>
+              </li>
+            </span>
           </article>
-          <ul class="not-prose flex flex-wrap gap-2">
-            {
-              SOCIALS.map((SOCIAL) => (
-                <li class="flex gap-x-2 text-nowrap">
-                  <Link
-                    href={SOCIAL.HREF}
-                    external
-                    aria-label={`${SITE.TITLE} on ${SOCIAL.NAME}`}
-                  >
-                    {SOCIAL.NAME}
-                  </Link>
-                  {"/"}
-                </li>
-              ))
-            }
-            <li class="line-clamp-1">
-              <Link
-                href={`mailto:${SITE.EMAIL}`}
-                aria-label={`Email ${SITE.TITLE}`}
-              >
-                {SITE.EMAIL}
-              </Link>
-            </li>
-          </ul>
         </section>
       </div>
     </aside>
