--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,68 +24,70 @@ const projects: CollectionEntry<"projects">[] = (
   <Container>
     <aside data-pagefind-ignore>
       <h1 class="animate font-semibold text-black dark:text-white">
-        Introducing Astro Micro
+        Henrique's Portfolio
       </h1>
       <div class="space-y-16">
         <section>
           <article class="space-y-4">
             <span class="animate">
               <p>
-                Astro Micro is an accessible theme for <Link
-                  href="https://astro.build/">Astro</Link
-                >. It's a fork of
-                <Link href="https://github.com/markhorn-dev">
-                  Mark Horn's
-                </Link> popular theme <Link
-                  href="https://astro.build/themes/details/astronano/"
-                  >Astro Nano</Link
-                >. Like Nano, Micro comes with zero frameworks installed.
+                Hello, my name is <strong>Henrique GC</strong>, and I am a
+                backend software engineer with <strong
+                  >4 years of experience</strong
+                >. I specialize in software architecture, team leadership, and
+                developing high-quality software solutions.
               </p>
               <p>
-                Micro adds features like <Link href="https://pagefind.app/"
-                  >Pagefind</Link
-                > for search and more. For a full list of changes, see this <Link
-                  href="/blog/00-micro-changelog">blog post</Link
-                >.
+                Currently, I am a <strong>Backend Java Specialist</strong>,
+                focusing on building <strong>Spring-based APIs</strong>. I also
+                bring experience in frontend and mobile development.
+              </p>
+              <p>
+                In addition to Spring, I have experience working with
+                technologies like Laravel, Node.js, NestJS, Flutter, and
+                ReactJS, enabling me to contribute a <strong
+                  >full-stack perspective</strong
+                > to my projects.
               </p>
             </span>
-            <span class="animate">
-              <p>
-                Micro still comes with everything great about Nano — full type
-                safety, a sitemap, an RSS feed, and Markdown + MDX support.
-                Styled with TailwindCSS and preconfigured with system, light,
-                and dark themes.
-              </p>
-              <p>
-                Visit
-                <Link href="https://github.com/trevortylerlee/astro-micro">
-                  Astro Micro on GitHub
+            <span class="animate flex gap-1">
+              {
+                SOCIALS.map((SOCIAL) => (
+                  <li class="flex gap-x-1 text-nowrap">
+                    <img
+                      class="h-4 w-4 dark:hidden"
+                      src={SOCIAL.ICON}
+                      alt="Light Image"
+                    />
+                    <img
+                      class="hidden h-4 w-4 dark:block"
+                      src={SOCIAL.ICON_DARK}
+                      alt="Dark Image"
+                    />
+                    <Link
+                      href={SOCIAL.HREF}
+                      external
+                      aria-label={`${SITE.TITLE} on ${SOCIAL.NAME}`}
+                    >
+                      {SOCIAL.NAME}
+                    </Link>
+                    {"/"}
+                  </li>
+                ))
+              }
+              <li class="line-clamp-1">
+                <Link
+                  href={`mailto:${SITE.EMAIL}`}
+                  aria-label={`Email ${SITE.TITLE}`}
+                >
+                  {SITE.EMAIL}
                 </Link>
-                to fork the repository to get started.
-              </p>
+              </li>
             </span>
           </article>
         </section>
 
-        <section class="animate space-y-6">
-          <div class="flex flex-wrap items-center justify-between gap-y-2">
-            <h2 class="font-semibold text-black dark:text-white">
-              Latest posts
-            </h2>
-            <Link href="/blog"> See all posts </Link>
-          </div>
-          <ul class="not-prose flex flex-col gap-4">
-            {
-              blog.map((post) => (
-                <li>
-                  <ArrowCard entry={post} />
-                </li>
-              ))
-            }
-          </ul>
-        </section>
-
-        <section class="animate space-y-6">
+        <!-- <section class="animate space-y-6">
           <div class="flex flex-wrap items-center justify-between gap-y-2">
             <h2 class="font-semibold text-black dark:text-white">
               Recent projects
@@ -101,43 +103,27 @@ const projects: CollectionEntry<"projects">[] = (
               ))
             }
           </ul>
-        </section>
+        </section> -->
 
-        <section class="animate space-y-4">
-          <h2 class="font-semibold text-black dark:text-white">
-            Let's Connect
-          </h2>
-          <article>
-            <p>
-              If you want to get in touch with me about something or just to say
-              hi, reach out on social media or send me an email.
-            </p>
-          </article>
-          <ul class="not-prose flex flex-wrap gap-2">
+        <!-- <section class="animate space-y-6">
+          <div class="flex flex-wrap items-center justify-between gap-y-2">
+            <h2 class="font-semibold text-black dark:text-white">
+              Latest posts
+            </h2>
+            <Link href="/blog"> See all posts </Link>
+          </div>
+          <ul class="not-prose flex flex-col gap-4">
             {
-              SOCIALS.map((SOCIAL) => (
-                <li class="flex gap-x-2 text-nowrap">
-                  <Link
-                    href={SOCIAL.HREF}
-                    external
-                    aria-label={`${SITE.TITLE} on ${SOCIAL.NAME}`}
-                  >
-                    {SOCIAL.NAME}
-                  </Link>
-                  {"/"}
+              blog.map((post) => (
+                <li>
+                  <ArrowCard entry={post} />
                 </li>
               ))
             }
-            <li class="line-clamp-1">
-              <Link
-                href={`mailto:${SITE.EMAIL}`}
-                aria-label={`Email ${SITE.TITLE}`}
-              >
-                {SITE.EMAIL}
-              </Link>
-            </li>
           </ul>
-        </section>
+        </section> -->
+
+        <section class="animate space-y-4"></section>
       </div>
     </aside>
   </Container>
